--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^8.0.7",
+    "@prisma/client": "^5.22.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
