--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^8.0.7",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
