--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^8.0.7",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
