--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,25 @@
-version: "3.9"
+version: '3.8'
+
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: node_app
     ports:
-      - "8080:8080"
-    environment:
-      - NODE_ENV=production
+      - '8080:8080'
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    ports:
+      - 5432:5432
+    env_file:
+      - .env
     volumes:
-      - .:/app
-      - /app/node_modules
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
