Update example.env file to fit project

--- a/example.env
+++ b/example.env
@@ -1,10 +1,18 @@
 # Libuv
 # UV_THREADPOOL_SIZE=5
 
-# TMDB
-TMDB_API_KEY=
-TMDP_BASE_URL=
-TMDP_READ_ACCESS_TOKEN=
+#PORT
+PORT=8080
 
-# DATABASE
-DATABASE_URL=postgres://user:password@localhost:5432/tmdb
+TMDB_API_KEY=you_tmdb_api_key
+TMDP_BASE_URL=https://api.themoviedb.org/3
+
+# Datebase
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=tmdb
+POSTGRES_PORT=5432
+
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_db:5432/${POSTGRES_DB}
+
+X_API_KEY=you_x_api_key
