--- a/example.env
+++ b/example.env
@@ -12,7 +12,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=tmdb
 POSTGRES_PORT=5432
-
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_db:5432/${POSTGRES_DB}
 
+# X-API-KEY
 X_API_KEY=you_x_api_key
